--- a/pom.xml
+++ b/pom.xml
@@ -15,4 +15,20 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <repositories>
+	<repository>
+		<id>maven-group</id>
+		<url>http://localhost:8081/repository/maven-public/</url>
+	</repository>
+</repositories>
+<distributionManagement>
+	<snapshotRepository>
+		<id>nexus-snapshots</id>
+		<url>http://localhost:8081/repository/maven-snapshots/</url>
+	</snapshotRepository>
+	<repository>
+		<id>nexus-releases</id>
+		<url>http://localhost:8081/repository/maven-releases/</url>
+	</repository>
+</distributionManagement>
 </project>
